update bigmap endpoint
